Agrego texto definitivo

--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -74,18 +74,18 @@
         <img class="banner-acerca-de" src="./../img/nails-banner-1.png" alt="banner-unias">
         <div class="about-text-container">
             <h3 class="subtitulo-acerca-de">Quienes somos?</h3>
-            <p class="parrafo-acerca-de">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat. </p>
+            <p class="parrafo-acerca-de">Sofi Nails nació con la misma idea que la que tenés al momento de leer estas
+                líneas: Personalizar tu estilo decorando las manos con una idea particular. Quién mejor dejar a cargo de
+                tus uñas que alguien que piensa igual que vos? Desde Bahía Blanca y para todo el país, fabricamos uñas a
+                medida para cada uno, siendo tan exigentes como si fueran para nosotros mismos.</p>
         </div>
         <img class="banner-acerca-de" src="./../img/nails-banner-2.png" alt="banner-unias">
         <div class="about-text-container">
             <h3 class="subtitulo-acerca-de">Acerca de Sofi...</h3>
-            <p class="parrafo-acerca-de">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                laborum.</p>
+            <p class="parrafo-acerca-de">Ilustradora, maquilladora, manicurista. La trifecta que se necesita para crear
+                productos de calidad. Desde su estudio, conformado por herramientas especiales de alta gama y manos
+                capaces, Sofi se dedica a plasmar en unos tips plásticos todas las ideas que le llegan. El secreto?
+                Ganas, pasión y mucho amor.</p>
         </div>
     </main>
 
