--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -77,31 +77,24 @@
         <h2 class="subtitulo-servicios">Uñas simples</h2>
         <div class="servicios-parrafo-container">
             <img src="./../img/simple-sample.jpeg" alt="uñas simples">
-            <p class="parrafo-servicios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae repellendus, in
-                facilis reprehenderit
-                tempore
-                voluptatibus atque quam neque, veritatis odit aperiam quo? Nam minus alias sapiente dolore nihil iste
-                facere.
+            <p class="parrafo-servicios">Quien dice que la simpleza no puede destacar? Colores vivos para combinar con
+                todos tus outfits, lucí unas manos hermosas en poco tiempo. Gran disponibilidad de tonos y gradientes!
             </p>
         </div>
 
         <h2 class="subtitulo-servicios">Uñas intermedias</h2>
         <div class="servicios-parrafo-container">
-            <p class="parrafo-servicios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis ratione
-                officiis consequuntur quis
-                sapiente quia illum? Perferendis inventore quam incidunt, iure sapiente esse corporis a, maiores
-                dignissimos
-                amet reiciendis placeat!
+            <p class="parrafo-servicios">Destacá sobre el resto. Patrones clásicos y modernos, diseños personalizados a
+                tu gusto! Agregá ese toque
+                adicional que te refleje tu identidad.
             </p>
             <img src="./../img/medium-sample.jpeg" alt="uñas intermedias">
         </div>
         <h2 class="subtitulo-servicios">Uñas complejas</h2>
         <div class="servicios-parrafo-container">
             <img src="./../img/complex-sample.jpeg" alt="uñas complejas">
-            <p class="parrafo-servicios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, suscipit
-                dignissimos tempore sed
-                voluptas
-                laborum aliquam. At quas iure vel aut! Distinctio error ratione quos, sequi quae in asperiores itaque!
+            <p class="parrafo-servicios">Convertí esa idea loca que tenés en la cabeza en una realidad. Lo que se te
+                ocurra, en la palma de tu mano. O más bien en los dedos.
             </p>
         </div>
     </main>
