--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a class="nav-link" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item animation-darken">
-                    <a class="nav-link" href="./pages/galeria.html">Servicios</a>
+                    <a class="nav-link" href="./pages/servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item animation-darken">
                     <a class="nav-link" href="./pages/galeria.html">Galería</a>
