--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Uñas, Press On, Manicuria, Sofi Nails">
+    <meta name="description"
+        content="Uñas Press On personalizadas! Sofi Nails plasma el diseño que vos mas querés en tus manos. Todo 100% a medida!">
     <title>Sofi Nails</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +45,7 @@
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-lg navbar-light pink-background">
+    <nav class="navbar navbar-expand-lg navbar-light pink-background nav-container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
