--- a/pages/que-son-las-unas-press-on.html
+++ b/pages/que-son-las-unas-press-on.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Uñas, Press On, Sofi Nails">
+    <meta name="description" content="Uñas press on: Qué son, de qué estan hechas y cómo colocarlas.">
     <title>Sofi Nails</title>
     <link rel="stylesheet" href="./../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +42,7 @@
         </form>
     </header>
 
-    <nav class="navbar navbar-expand-lg navbar-light pink-background">
+    <nav class="navbar navbar-expand-lg navbar-light pink-background nav-container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
