agrego mixins, favicon, extends, arreglos generales

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="keywords" content="Uñas, Press On, Manicuria, Sofi Nails">
     <meta name="description"
         content="Uñas Press On personalizadas! Sofi Nails plasma el diseño que vos mas querés en tus manos. Todo 100% a medida!">
-    <title>Sofi Nails</title>
+    <title>Bienvenido a Sofi Nails!</title>
+    <link rel="icon" href="./img/nails.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
