--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Uñas, Press On, Contacto">
     <meta name="description" content="Dudas? Consultas? Contactate con nosotros!">
-    <title>Sofi Nails</title>
+    <title>Contacto - Sofi Nails</title>
+    <link rel="icon" href="../img/nails.png" type="image/x-icon">
     <link rel="stylesheet" href="./../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
