--- a/pages/que-son-las-unas-press-on.html
+++ b/pages/que-son-las-unas-press-on.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Uñas, Press On, Sofi Nails">
     <meta name="description" content="Uñas press on: Qué son, de qué estan hechas y cómo colocarlas.">
-    <title>Sofi Nails</title>
+    <title>Qué son las press on? - Sofi Nails</title>
+    <link rel="icon" href="../img/nails.png" type="image/x-icon">
     <link rel="stylesheet" href="./../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
