correccion de colores en main

--- a/index.html
+++ b/index.html
@@ -161,17 +161,17 @@
                         <!-- Facebook -->
                         <a class="btn btn-primary btn-floating m-1 facebook-color"
                             href="https://www.facebook.com/sofia.meriggi">
-                            <img id="facebook-icon" class="icons" src="./../img/facebook.png" alt="Facebook">
+                            <img id="facebook-icon" class="icons" src="./img/facebook.png" alt="Facebook">
                         </a>
 
                         <!-- Instagram -->
                         <a class="btn btn-primary btn-floating m-1 instagram-color"
                             href="https://www.instagram.com/sofi.nailsbb/" role="button">
-                            <img id="instagram-icon" class="icons" src="./../img/instagram.png" alt="Instagram">
+                            <img id="instagram-icon" class="icons" src="./img/instagram.png" alt="Instagram">
                         </a>
                         <!-- Mail -->
                         <a class="btn btn-primary btn-floating m-1 mail-color" href="mailto:contacto@sofinails.com"
-                            role="button"><img id="mail-icon" class="icons" src="./../img/mail.png" alt="Mail">
+                            role="button"><img id="mail-icon" class="icons" src="./img/mail.png" alt="Mail">
                         </a>
 
                     </div>
