ajuste de iframe y correccion ortografica

--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -63,7 +63,7 @@
                     <a class="nav-link" href="./../pages/que-son-las-unas-press-on.html">Qué son las uñas press-on?</a>
                 </li>
                 <li class="nav-item animation-darken">
-                    <a class="nav-link" href="./../pages/contacto.html">Contaco</a>
+                    <a class="nav-link" href="./../pages/contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item active animation-darken">
                     <a class="nav-link" href="./../pages/acerca-de.html">Acerca de</a>
