--- a/pages/que-son-las-unas-press-on.html
+++ b/pages/que-son-las-unas-press-on.html
@@ -63,7 +63,7 @@
                     <a class="nav-link" href="./../pages/que-son-las-unas-press-on.html">Qué son las uñas press-on?</a>
                 </li>
                 <li class="nav-item animation-darken">
-                    <a class="nav-link" href="./../pages/contacto.html">Contaco</a>
+                    <a class="nav-link" href="./../pages/contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item animation-darken">
                     <a class="nav-link" href="./../pages/acerca-de.html">Acerca de</a>
@@ -111,13 +111,13 @@
             </p>
             <img src="./../img/define-2.jpeg" alt="unias">
         </div>
-
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/9If1mckU5vY" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-        </iframe>
-
+        <div class="video-wrapper">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/9If1mckU5vY"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+        </div>
     </main>
 
     <footer class="text-center text-lg-start text-white" style="background-color: #3a3a3a">
