--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a class="nav-link" href="./pages/que-son-las-unas-press-on.html">Qué son las uñas press-on?</a>
                 </li>
                 <li class="nav-item animation-darken">
-                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="./pages/contacto.html">Contaco</a>
                 </li>
                 <li class="nav-item animation-darken">
                     <a class="nav-link" href="./pages/acerca-de.html">Acerca de</a>
@@ -93,10 +93,7 @@
                             <div class="presentationTextContainer--left">
                                 <h1 class="presentationTitulo textoOscuro">Uñas para cada ocasión</h1>
                                 <p class="presentationParrafo textoOscuro">Añadí estilo y glamour a todos tus outfits
-                                    combinándolos
-                                    con
-                                    los mejores
-                                    diseños en press on nails</p>
+                                    combinándolos con los mejores diseños</p>
                             </div>
                         </div>
                     </article>
