--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a class="nav-link" href="./pages/que-son-las-unas-press-on.html">Qué son las uñas press-on?</a>
                 </li>
                 <li class="nav-item animation-darken">
-                    <a class="nav-link" href="./pages/contacto.html">Contaco</a>
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item animation-darken">
                     <a class="nav-link" href="./pages/acerca-de.html">Acerca de</a>
@@ -105,9 +105,7 @@
                             <div class="presentationTextContainer--right">
                                 <h1 class="presentationTitulo textoClaro">Variedad de estilos</h1>
                                 <p class="presentationParrafo textoClaro">Elegí entre texturas, colores, brillo y
-                                    cientos de otras
-                                    características
-                                    para destacar</p>
+                                    cientos de otras características para destacar</p>
                             </div>
                         </div>
                     </article>
@@ -119,10 +117,7 @@
                             <div class="presentationTextContainer--left">
                                 <h1 class="presentationTitulo textoOscuro">Totalmente personalizadas</h1>
                                 <p class="presentationParrafo textoOscuro">Creá la idea para tus manos o elegí entre
-                                    cientos de
-                                    diseños
-                                    hechos 100%
-                                    a medida</p>
+                                    cientos de diseños hechos 100% a medida</p>
                             </div>
                         </div>
                     </article>
