--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,7 +60,7 @@
                     <a class="nav-link" href="./../pages/galeria.html">Galería</a>
                 </li>
                 <li class="nav-item animation-darken">
-                    <a class="nav-link" href="./../pages/que-son-las-unas-press-on.html">Qué son las uñas press-on?</a>
+                    <a class="nav-link" href="./../pages/que-son-las-unas-press-on.html">Uñas press-on</a>
                 </li>
                 <li class="nav-item active animation-darken">
                     <a class="nav-link" href="./../pages/contacto.html">Contacto</a>
