--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -86,13 +86,13 @@
             </div>
 
             <div class="form-group col-md-6">
-                <label for="inputAddress">Direccion</label>
+                <label for="inputAddress">Dirección</label>
                 <input type="text" class="form-control" id="inputAddress" placeholder="Dirección">
             </div>
 
             <div class="form-group col-md-6">
                 <label for="inputCity">Ciudad</label>
-                <input type="text" class="form-control" id="inputCity">
+                <input type="text" class="form-control" id="inputCity" placeholder="Ciudad">
             </div>
             <div class="form-group col-md-6">
                 <label for="inputState">Provincia</label>
